# decidely.so

./: .env.example  ARCHITECTURE.md  DECIDELY_README.md  INSTALLATION.md  MVP_STEPS.md  QUICKSTART.md  README.md  SANDBOX_SETUP.md  app.py  check_app.py  claude.md  debug_socket_mode.py  manifest-minimal.json  manifest.json  pyproject.toml  setup_commands.fish  start.fish  start.sh
.claude/: settings.local.json
.slack/: config.json
docs/: LOCALIZATION.md
listeners/commands/: __init__.py  decidely_list.py  decidely_report.py
listeners/views/: __init__.py  decidely_report_view.py
models/: report.py
repositories/: report_repository.py  sqlite_report_repository.py
services/: report_service.py
tests/e2e/: test_bot_startup.py  test_command_flow.py
tests/listeners/commands/: test_decidely_commands.py
tests/unit/: test_models.py  test_report_service.py  test_repository.py  test_sqlite_repository.py
