[project]
name = "decidely"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.19",
    "slack-sdk>=3.33",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "black>=24.8",
    "ruff>=0.7",
    "mypy>=1.11",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipython>=8.27",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
